# pymatcal

./: .buildinfo  .gitignore  .gitmodules  INSTALL  INSTALL.html  INSTALL.rst  MANIFEST.in  Pipfile  README.md  api-ref.html  basics.html  blog.html  deps.html  draw.py  draw_dist.py  genindex.html  get_all_ppdfs_mpi.py  index.html  multiplexingIndex_test.py  objects.inv  pair-calc-mp-map.py  pair-calc-optimization.py  pair-calc.py  py-modindex.html  pyMatcal_routines.py  pymatcal_routines.html  pyproject.toml  quickstart.html  readSysmat.py  requirements.txt  sbatch.sh  search.html  searchindex.js  test.py  test2.py  test_numpy_matrix_orientation.py  toc.html  ubccr_env.sh  unit_test.py
.doctrees/: INSTALL.doctree  api-ref.doctree  basics.doctree  deps.doctree  environment.pickle  index.doctree  pymatcal_routines.doctree  quickstart.doctree  toc.doctree
_sources/: basics.md.txt  index.rst.txt  quickstart.rst.txt
_sources/guides/: index.rst.txt  (+2 more)
blog/: 2024.html  archive.html  author.html  category.html  drafts.html  language.html  location.html  tag.html
configs/: config-bak.yml  config-multiplexing.yml  config.yml
cpp/: CMakeLists.txt
cpp/python/: config-multiplexing.yml  plotmap.ipynb  pyMatcal_routines.py  test.py
cpp/src/: main.cpp  ray_cuboid_intersection.cpp  ray_cuboid_intersection.h
examples/: get_all_ppdfs_loop.py  get_all_ppdfs_mpi.py  get_taskId_mpi.py  local_functions.py  panel_all.yaml  panel_all_test.yaml  plot_ppdf_hdf5.py  read_sysmat_hdf5.ipynb  test_20240722_182815.yml  test_20240806.yml  test_get_config.py  test_small.yml  test_small_rshift.yml  test_small_tshift.yml
guides/: doc_develop.html  index.html  read_sysmat_hdf5.html
include/: deps.html
plot/: plotDetector.py  plotDetectorOptimization.py  plot_intersection.py
pymatcal/: README.md  __init__.py  config_schema.json  coord_transform.py  get_config.py  intersections.py  pair_ppdf.py  pyMatcal_routines.py  pyproject.toml  solid_angle.py  subdivcoords.py  subdivs.py
pymatcal/_utils/: __init__.py
pymatcal/schema/: __init__.py
test/: get_all_ppdfs_loop.py  get_all_ppdfs_mpi.py  test1.ipynb  test_20240722_182815.hdf5  test_20240722_182815.yml  test_numpy_matrix_orientation.py  test_proc_idx.py  wrapper.sh
validation/: README.md  abpair.ipynb  all_ppdfs.ipynb  all_ppdfs_mpi.py  config-pair-ppdf.yml  config.yml  config_schema.json  coordinate-transformation.html  coordinate-transformation.ipynb  generate-README.py  get_config.ipynb  get_config.md  get_subdivcoords.ipynb  intersection-2d.ipynb  intersections.html  mpi_sequence.py  myfile.hdf5  pairs-ppdf.ipynb  pairs_ppdf.ipynb  plot_ppdf_hdf5_mpi.py  proc_index_map.ipynb  read_mpi_out.py  solid_angle.ipynb  subdiv-pairs.ipynb  subdiv_pairs.ipynb  test-config.yml
(+52 files in other folders)
