[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
authors = [{ name = "Fang Han", email = "fhan0904@gmail.com" }]
dependencies = ["numpy"]
name = "pymatcal"
version = "0.1.0"
description = "Python package for SPEBT system PPDF matrix analytical calculation"
readme = "README.md"

[tool.setuptools.packages]
find = {}  # Scan the project directory with the default parameters

# # OR
# [tool.setuptools.packages.find]
# # All the following settings are optional:
# where = ["src"]  # ["."] by default
# include = ["mypackage*"]  # ["*"] by default
# exclude = ["mypackage.tests*"]  # empty by default
# namespaces = false  # true by default